UI/Ux worked on : animation, transition 18/9/19

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -37,8 +37,13 @@
     }
     /* ***********styling for cloak******* */
 
+.menu-over{
+    z-index: 100 !important;
+}
 
-
+.orange{
+    color: #FFA500;
+}
     .text-white{
         color:white;
     }
