--- a/public/css/style.css
+++ b/public/css/style.css
@@ -290,6 +290,7 @@ font-weight:700;
 background-color:#fff;
 color:#1d202d; 
 border:2px #FFA500 solid;
+border-radius: 50px;
 }
 a.button_small{
 background-color:#FFA500; 
@@ -2544,6 +2545,8 @@ font-size:16px;
 }
 a.button_full{
 padding:10px 0;
+border-radius: 50px;
+   
 }
 .bottombarpages{
 height:60px;
