--- a/public/css/style.css
+++ b/public/css/style.css
@@ -39,7 +39,7 @@ Template:	UpMobile - Mobile HTML Template
 /*===============================================*/
 /* 1. RESET		 						 */
 /*===============================================*/
-@import "/css/reset.css";
+@import "/css/reset.min.css";
 
 /*===============================================*/
 /* 2. GENERAL		 						 */
